# janus-mcp

./: .gitignore  .gitleaks.toml  CLAUDE.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: quickstart.md  runbook.md  threat-model.md
examples/: config.yaml
rbac/: janus-mcp-rbac.yaml
src/janus_mcp/: __init__.py  audit.py  cli.py  config.py  kube.py  policy.py  server.py  validation.py
src/janus_mcp/redaction/: __init__.py  patterns.py  render.py  structural.py
tests/: conftest.py  support.py
tests/fixtures/: README.md  configmap.json  deployment.json  events.json  namespaces.json  node.json  pod.json  pods.json  service.json
tests/integration/: test_kind.py
tests/integration/manifests/: janus-it.yaml
tests/security/: capture.py  test_approval.py  test_frame_capture.py  test_probes.py
tests/unit/: test_config_audit.py  test_goldens.py  test_patterns.py  test_render.py  test_structural.py  test_validation_policy.py
tests/unit/goldens/: describe_configmap.txt  describe_deployment.txt  describe_node.txt  describe_pod.txt  describe_service.txt  get_events.txt  get_logs.txt  get_pods.txt
